<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scan"
            android:title="@string/scanner"/>
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/ic_storage"
            android:title="@string/nav_connections" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices_black"
            android:title="@string/nav_devices" />

        <item
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
    </group>

</menu>
