<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp">

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        android:textColor="@color/red" />

    <RelativeLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/errorText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border">

        <ImageView
            android:id="@+id/serverIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/server_icon"
            android:src="@drawable/ic_server"
            android:tint="@color/whiteGrey" />

        <EditText
            android:id="@+id/editServerUrl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/serverIcon"
            android:background="@android:color/transparent"
            android:hint="@string/server_url"
            android:inputType="textUri"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHighlight="@android:color/secondary_text_dark"
            android:textColorHint="@android:color/tertiary_text_dark" />

        <ProgressBar
            android:id="@+id/serverCheckProgress"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:alpha="0"
            android:indeterminateTint="@color/whiteGrey" />

        <ImageView
            android:id="@+id/serverCheckImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:alpha="0"
            android:contentDescription="@string/server_check_image" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/firstRow"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/username_icon"
            android:src="@drawable/ic_user"
            android:tint="@color/whiteGrey" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/userIcon"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/tertiary_text_dark" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/secondRow"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/lock_icon"
            android:src="@drawable/ic_locked"
            android:tint="@color/whiteGrey" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/passwordIcon"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@android:color/tertiary_text_dark" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdRow"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_button" />

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@drawable/login_button_text_color" />

        <ProgressBar
            android:id="@+id/buttonProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:elevation="5dp"
            android:indeterminateTint="@android:color/white" />

        <ImageView
            android:id="@+id/resultButtonIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:contentDescription="@string/result_icon"
            android:elevation="5dp"
            android:tint="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>