<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scrollbars="vertical" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:elevation="6dp"
            android:focusable="true">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fab_background"
                android:contentDescription="@string/fab_background"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_add"
                android:tint="@android:color/white"
                android:contentDescription="@string/fab_icon"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expanded_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparentGrey"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white"
                android:contentDescription="@string/status_icon"/>

            <fr.socket.florian.dhome.view.login.LoginForm
                android:id="@+id/loginForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

        </RelativeLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>